# shep

./: Cargo.toml  README.md
skills/principal-review/: SKILL.md
src/: claude_trust.rs  config.rs  daemon.rs  git.rs  github.rs  herdr.rs  main.rs  notify.rs  paths.rs  review.rs  skill.rs  state.rs  tmux.rs
