[package]
name = "shepherd"
version = "0.1.0"
edition = "2021"
description = "Watches GitHub for PR review requests and launches a principal-engineer Claude Code review in a dedicated herdr workspace"

[[bin]]
name = "shepherd"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["clock"], default-features = false }
